[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/main/world/creature/creature-curve.gd" type="Script" id=1]
[ext_resource path="res://src/main/world/creature/arm-shadow.gd" type="Script" id=2]
[ext_resource path="res://src/main/world/creature/body-shadows.gd" type="Script" id=3]

[sub_resource type="Curve2D" id=1]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array( 0.0132871, -28.7557, -0.0132871, 28.7557, -75.8492, -194.392, -35.1478, -0.510676, 35.1478, 0.510676, -4.62206, -140.083, -1.01159, 23.918, 1.01159, -23.918, 69.5146, -197.176, 39.4804, 0.0106763, -39.4804, -0.0106763, -3.25064, -252.85, -0.98502, -37.2608, 0.98502, 37.2608, -76.016, -196.285 )
}

[sub_resource type="Curve2D" id=2]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array( -0.406213, -25.2511, 0.406213, 25.2511, -52.1464, -95.8422, -15.033, -0.930175, 15.033, 0.930175, -35.3105, -40.6775, 0.447881, 26.5546, -0.447881, -26.5546, -17.7528, -99.4823 )
}

[sub_resource type="Curve2D" id=3]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array( 6.58688, 174.087, -6.58688, -174.087, -174.408, 119.607, 0, 0, 0, 0, -177.907, -85.841, -104.154, -2.86398, 104.154, 2.86398, 0.329075, -36.3247, 0, 0, 0, 0, 151.839, -82.2426, 1.9275, -160.605, -1.9275, 160.605, 149.776, 134.902 )
}

[node name="Shadows" type="Node2D"]
script = ExtResource( 3 )

[node name="HeadShadow" type="Path2D" parent="."]
self_modulate = Color( 1, 1, 1, 1 )
curve = SubResource( 1 )
script = ExtResource( 1 )
line_color = Color( 0.254902, 0.156863, 0.117647, 0 )
fill_color = Color( 0, 0, 0, 1 )
editing = false
curve_defs = [ {
"curve_def": [ [ Vector2( -88.3842, -133.799 ), Vector2( 0.0132871, -28.7557 ), Vector2( -0.0132871, 28.7557 ) ], [ Vector2( -17.1122, -78.5636 ), Vector2( -35.1478, -0.510676 ), Vector2( 35.1478, 0.510676 ) ], [ Vector2( 57.7233, -137.363 ), Vector2( -1.01159, 23.918 ), Vector2( 1.01159, -23.918 ) ], [ Vector2( -15.3304, -192.599 ), Vector2( 39.4804, 0.0106763 ), Vector2( -39.4804, -0.0106763 ) ], [ Vector2( -88.3842, -135.581 ), Vector2( -0.98502, -37.2608 ), Vector2( 0.98502, 37.2608 ) ] ],
"fatness": 1.0
}, {
"curve_def": [ [ Vector2( -88.3842, -133.799 ), Vector2( 0.0132871, -28.7557 ), Vector2( -0.0132871, 28.7557 ) ], [ Vector2( -17.1122, -78.5636 ), Vector2( -35.1478, -0.510676 ), Vector2( 35.1478, 0.510676 ) ], [ Vector2( 57.7233, -137.363 ), Vector2( -1.01159, 23.918 ), Vector2( 1.01159, -23.918 ) ], [ Vector2( -15.3304, -192.599 ), Vector2( 39.4804, 0.0106763 ), Vector2( -39.4804, -0.0106763 ) ], [ Vector2( -88.3842, -135.581 ), Vector2( -0.98502, -37.2608 ), Vector2( 0.98502, 37.2608 ) ] ],
"fatness": 2.0
}, {
"curve_def": [ [ Vector2( 11.8961, -618.539 ), Vector2( 0.0132871, -28.7557 ), Vector2( -0.0132871, 28.7557 ) ], [ Vector2( 82.8089, -570.715 ), Vector2( -35.1478, -0.510676 ), Vector2( 35.1478, 0.510676 ) ], [ Vector2( 152.054, -615.87 ), Vector2( -1.01159, 23.918 ), Vector2( 1.01159, -23.918 ) ], [ Vector2( 81.3077, -674.603 ), Vector2( 39.4804, 0.0106763 ), Vector2( -39.4804, -0.0106763 ) ], [ Vector2( 10.5612, -621.209 ), Vector2( -0.98502, -37.2608 ), Vector2( 0.98502, 37.2608 ) ] ],
"fatness": 10.0
} ]

[node name="ArmShadow" type="Path2D" parent="."]
self_modulate = Color( 1, 1, 1, 1 )
curve = SubResource( 2 )
script = ExtResource( 2 )
line_color = Color( 0, 0, 0, 0 )
fill_color = Color( 0, 0, 0, 1 )
editing = false
curve_defs = [ {
"curve_def": [ [ Vector2( -43.0168, -76.6825 ), Vector2( 0.0132866, -18.8561 ), Vector2( -0.0132866, 18.8561 ) ], [ Vector2( -24.3291, -27.2935 ), Vector2( -16.5249, -0.510677 ), Vector2( 16.5249, 0.510677 ) ], [ Vector2( -5.64136, -76.6825 ), Vector2( 0.429193, 20.722 ), Vector2( -0.429193, -20.722 ) ] ],
"fatness": 1.0
}, {
"curve_def": [ [ Vector2( -40.6024, -57.1281 ), Vector2( -0.196463, -22.0536 ), Vector2( 0.196463, 22.0536 ) ], [ Vector2( -24.2234, -11.7709 ), Vector2( -13.7767, -0.720426 ), Vector2( 13.7767, 0.720426 ) ], [ Vector2( -6.58453, -60.9078 ), Vector2( 0.438537, 23.6383 ), Vector2( -0.438537, -23.6383 ) ] ],
"fatness": 2.0
}, {
"curve_def": [ [ Vector2( -132.954, -366.841 ), Vector2( -1.87446, -47.6332 ), Vector2( 1.87446, 47.6332 ) ], [ Vector2( -112.92, -243.024 ), Vector2( -23.8274, -2.39842 ), Vector2( 23.8274, 2.39842 ) ], [ Vector2( -95.9306, -369.504 ), Vector2( 0.513287, 46.9685 ), Vector2( -0.513287, -46.9685 ) ] ],
"fatness": 10.0
} ]
drawn_when_facing_north = false

[node name="BellyShadow" type="Path2D" parent="."]
self_modulate = Color( 1, 1, 1, 1 )
curve = SubResource( 3 )
script = ExtResource( 1 )
line_color = Color( 0, 0, 0, 0 )
fill_color = Color( 0, 0, 0, 1 )
editing = false
curve_defs = [ {
"curve_def": [ [ Vector2( -71.2125, 123.297 ), Vector2( -6.14105, 120.347 ), Vector2( 6.14105, -120.347 ) ], [ Vector2( -67.5195, -45.2749 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ], [ Vector2( -3.26202, -13.9503 ), Vector2( -53.2356, -1.9201 ), Vector2( 53.2356, 1.9201 ) ], [ Vector2( 50.3065, -45.2051 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ], [ Vector2( 53.3065, 121.814 ), Vector2( 3.34171, -88.48 ), Vector2( -3.34171, 88.48 ) ] ],
"fatness": 1.0
}, {
"curve_def": [ [ Vector2( -277.604, 115.917 ), Vector2( 19.3148, 227.827 ), Vector2( -19.3148, -227.827 ) ], [ Vector2( -288.295, -126.407 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ], [ Vector2( 3.92017, -58.6991 ), Vector2( -155.072, -3.80785 ), Vector2( 155.072, 3.80785 ) ], [ Vector2( 253.372, -119.28 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ], [ Vector2( 246.245, 147.989 ), Vector2( 0.513287, -232.73 ), Vector2( -0.513287, 232.73 ) ] ],
"fatness": 5.0
}, {
"curve_def": [ [ Vector2( -531.709, 275.346 ), Vector2( 19.3148, 227.827 ), Vector2( -19.3148, -227.827 ) ], [ Vector2( -527.472, -279.813 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ], [ Vector2( 2.25995, -101.823 ), Vector2( -326.124, -3.80785 ), Vector2( 326.124, 3.80785 ) ], [ Vector2( 540.467, -275.575 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ], [ Vector2( 540.467, 279.583 ), Vector2( 0.513287, -232.73 ), Vector2( -0.513287, 232.73 ) ] ],
"fatness": 10.0
} ]
